--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@ body {
   font-family: sans-serif;
 }
 
-.fc-h-100 {
+.fdc-h-100 {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-.fr {
+.fdr {
   display: flex;
   flex-direction: row;
 }
