--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   display: flex;
   flex-direction: row;
 }
+.frr {
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 .fa {
   flex: 1 1 auto;
