--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
+  height: 100%;
+  position: relative;
 }
 
 .no-select {
